    - ParsedSql can be created with ParsedSql.of(String, ParsedParameters) factory
    - ParsedParameters can be created with ParsedSql.positional(int) and
      ParsedSql.named(List<String>) factories.
    - Time config class lets you set a java.time.Clock instance to be used by timing features such
      as @Timestamped and the StatementContext timings.
  - New beta API
    - Type qualifiers for binding and mapping. Use annotations to distinguish between different SQL
      data types that map to the same Java type. e.g. VARCHAR, NVARCHAR, and Postgres MACADDR all
      map to String, but are bound and mapped with different JDBC APIs.
    - Support for NVARCHAR columns, using the @NVarchar qualifying annotation
    - Support for Postgres MACADDR columns, using the @MacAddr qualifying annotation
    - Support for HSTORE columns, using the @HStore annotation
    - @Json type qualifier with Jackson 2.0 bindings
  - Oracle DB support changes
    - Due to ongoing stability problems with Oracle's Maven servers, we have split the
      jdbi3-oracle12 artifact out of the main project, to a new home at
      https://github.com/jdbi/jdbi3-oracle12. This means that jdbi3-oracle12 versions will no
      longer stay in sync with the rest of Jdbi. Accordingly, we have removed jdbi3-oracle12
      from the BOM.

3.5.2
  - Bug Fixes
    - bindList throws an NPE if called with an immutable list,
      method is safe according to the specification
  - Improvements
    - improve binding private implementations of interfaces
    - improved loggability (through SqlLogger) of JDBI's built-in Argument instances

3.5.1 (whoops, 3.5.0 was released from the wrong commit!)
  - New API
    - SqlStatements.allowUnusedBindings allows you to bind Arguments to query parts that may be
      left out of the final query (e.g. by a TemplateEngine that renders conditional blocks)
      without getting an Exception.